<resources>
    <string name="app_name">Protocol</string>
    <string name="btnVolumeUp_text">+</string>
    <string name="btnVolumeDown_text">-</string>
    <string name="btnSearchUp_text">→</string>
    <string name="btnSearchDown_text">←</string>
    <string name="volume_text">Volume</string>
    <string name="frequency_text">Frequency</string>
    <string name="search_text">Search</string>
    <string name="presave_text">Presave</string>
    <string name="lowband_text">Lowband</string>
    <string name="midband_text">Midband</string>
    <string name="highband_text">Highband</string>
</resources>
